--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,17 @@
 <resources>
-    <string name="app_name">BitazzaDemo</string>
+    <string name="app_name">Bitazza</string>
     <string name="label_title_email">Email</string>
     <string name="label_title_password">Password</string>
     <string name="label_button_login">Login</string>
+    <string name="label_button_logout">Logout</string>
 
     <string name="menu_market">Market</string>
     <string name="menu_wallet">Wallet</string>
     <string name="menu_news">News</string>
     <string name="menu_activity">Activity</string>
     <string name="menu_setting">Settings</string>
+
+    <string name="market_title_volume">Volume</string>
+    <string name="market_title_price">Price</string>
+    <string name="market_title_change">Change</string>
 </resources>
